[gd_scene load_steps=4 format=3 uid="uid://c754aq07xarlj"]

[ext_resource type="SpriteFrames" uid="uid://dnu8babgfvnje" path="res://Sprites/Menu/5FramesSplash/FramesSplash.tres" id="1_knp4v"]
[ext_resource type="Script" path="res://Scripts/MenuScripts/SplashScreen.gd" id="2_hutxu"]
[ext_resource type="AudioStream" uid="uid://btoekee4wk2ve" path="res://Sounds/SplashScreenSound.wav" id="3_wxxin"]

[node name="Splash_Screen_Frames" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
layer = -2

[node name="ColorRect" type="ColorRect" parent="Control/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.909804, 0.756863, 0.439216, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -1)
sprite_frames = ExtResource("1_knp4v")
script = ExtResource("2_hutxu")

[node name="Change Scenes" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Animation Start" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wxxin")

[connection signal="animation_looped" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_looped"]
[connection signal="timeout" from="Change Scenes" to="AnimatedSprite2D" method="_on_change_scenes_timeout"]
[connection signal="timeout" from="Animation Start" to="AnimatedSprite2D" method="_on_animation_start_timeout"]
